--- a/src/Lithons.Mediator/Lithons.Mediator.csproj
+++ b/src/Lithons.Mediator/Lithons.Mediator.csproj
@@ -8,12 +8,20 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Lithons.Mediator.Abstractions\Lithons.Mediator.Abstractions.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" />
-    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" />
     <PackageReference Include="Microsoft.Extensions.Options" />
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Contexts\" />
+    <Folder Include="Contracts\" />
+    <Folder Include="Middleware\Command\Contracts\" />
+    <Folder Include="Middleware\Notification\Contracts\" />
+    <Folder Include="Middleware\Request\Contracts\" />
     <Folder Include="Models\" />
   </ItemGroup>
 
