Refactor CI: use composite action for build & test
Replaced inline build/test steps in build.yml and publish.yml with a reusable composite GitHub Action (.github/actions/build-test). Updated publish workflow to support manual version input, pack both Abstractions and main packages, and publish both .nupkg and .snupkg files. Added action.yml to encapsulate .NET setup, restore, build, and test logic.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,16 +14,5 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Setup .NET
-        uses: actions/setup-dotnet@v4
-        with:
-          dotnet-version: '10.x'
-
-      - name: Restore
-        run: dotnet restore
-
-      - name: Build
-        run: dotnet build --no-restore --configuration Release
-
-      - name: Test
-        run: dotnet test tests/Lithons.Mediator.Tests/Lithons.Mediator.Tests.csproj --no-build --configuration Release
+      - name: Build and Test
+        uses: ./.github/actions/build-test
