--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -3,6 +3,12 @@ name: Publish
 on:
   release:
     types: [published]
+  workflow_dispatch:
+    inputs:
+      version:
+        description: 'Package version (e.g. 1.0.0-preview.1)'
+        required: true
+        type: string
 
 jobs:
   build:
@@ -11,41 +17,33 @@ jobs:
       version: ${{ steps.version.outputs.version }}
 
     steps:
+      - name: Resolve version
+        id: version
+        run: |
+          if [ "${{ github.event_name }}" = "release" ]; then
+            echo "version=${GITHUB_REF_NAME#v}" >> "$GITHUB_OUTPUT"
+          else
+            echo "version=${{ inputs.version }}" >> "$GITHUB_OUTPUT"
+          fi
+
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Resolve version from tag
-        id: version
-        run: echo "version=${GITHUB_REF_NAME#v}" >> "$GITHUB_OUTPUT"
-
-      - name: Setup .NET
-        uses: actions/setup-dotnet@v4
+      - name: Build and Test
+        uses: ./.github/actions/build-test
         with:
-          dotnet-version: '10.x'
-
-      - name: Restore
-        run: dotnet restore
-
-      - name: Build
-        run: dotnet build --no-restore --configuration Release /p:Version=${{ steps.version.outputs.version }}
-
-      - name: Test
-        run: dotnet test tests/Lithons.Mediator.Tests/Lithons.Mediator.Tests.csproj --no-build --configuration Release
+          version: ${{ steps.version.outputs.version }}
 
       - name: Pack
-        run: dotnet pack src/Lithons.Mediator/Lithons.Mediator.csproj --no-build --configuration Release /p:Version=${{ steps.version.outputs.version }} --output ./nupkg
+        run: |
+          dotnet pack src/Lithons.Mediator.Abstractions/Lithons.Mediator.Abstractions.csproj --no-build --configuration Release /p:Version=${{ steps.version.outputs.version }} --output ./nupkg
+          dotnet pack src/Lithons.Mediator/Lithons.Mediator.csproj --no-build --configuration Release /p:Version=${{ steps.version.outputs.version }} --output ./nupkg
 
-      - name: Upload package artifacts
+      - name: Upload packages
         uses: actions/upload-artifact@v4
         with:
-          name: nupkg
-          path: ./nupkg/*.nupkg
-
-      - name: Upload symbol package artifacts
-        uses: actions/upload-artifact@v4
-        with:
-          name: snupkg
-          path: ./nupkg/*.snupkg
+          name: packages
+          path: ./nupkg/
 
   publish:
     runs-on: ubuntu-latest
@@ -60,16 +58,10 @@ jobs:
         with:
           dotnet-version: '10.x'
 
-      - name: Download package artifacts
+      - name: Download packages
         uses: actions/download-artifact@v4
         with:
-          name: nupkg
-          path: ./nupkg
-
-      - name: Download symbol package artifacts
-        uses: actions/download-artifact@v4
-        with:
-          name: snupkg
+          name: packages
           path: ./nupkg
 
       - name: NuGet login (OIDC trusted publishing)
@@ -79,4 +71,6 @@ jobs:
           user: ${{ secrets.NUGET_USERNAME }}
 
       - name: Push to NuGet.org
-        run: dotnet nuget push ./nupkg/*.nupkg --api-key ${{ steps.login.outputs.NUGET_API_KEY }} --source https://api.nuget.org/v3/index.json --skip-duplicate
+        run: |
+          dotnet nuget push ./nupkg/*.nupkg --api-key ${{ steps.login.outputs.NUGET_API_KEY }} --source https://api.nuget.org/v3/index.json --skip-duplicate
+          dotnet nuget push ./nupkg/*.snupkg --api-key ${{ steps.login.outputs.NUGET_API_KEY }} --source https://api.nuget.org/v3/index.json --skip-duplicate
